crates/tokmd-format/tests/snapshots/snapshot_coverage__module_json_envelope.snap
---
source: crates/tokmd-format/tests/snapshot_coverage.rs
assertion_line: 450
expression: pretty
---
{
  "args": {
    "children": "separate",
    "format": "json",
    "module_depth": 2,
    "module_roots": [
      "src"
    ],
    "top": 0
  },
  "children": "separate",
  "generated_at_ms": 0,
  "mode": "module",
  "module_depth": 2,
  "module_roots": [
    "src"
  ],
  "rows": [
    {
      "avg_lines": 120,
      "bytes": 40000,
      "code": 800,
      "files": 8,
      "lines": 960,
      "module": "src/core",
      "tokens": 2000
    },
    {
      "avg_lines": 120,
      "bytes": 20000,
      "code": 400,
      "files": 4,
      "lines": 480,
      "module": "src/api",
      "tokens": 1000
    }
  ],
  "scan": {
    "config": "auto",
    "excluded": [],
    "hidden": false,
    "no_ignore": false,
    "no_ignore_dot": false,
    "no_ignore_parent": false,
    "no_ignore_vcs": false,
    "paths": [
      "."
    ],
    "treat_doc_strings_as_comments": false
  },
  "schema_version": 2,
  "status": "complete",
  "tool": {
    "name": "tokmd",
    "version": "0.0.0"
  },
  "top": 0,
  "total": {
    "avg_lines": 120,
    "bytes": 60000,
    "code": 1200,
    "files": 12,
    "lines": 1440,
    "tokens": 3000
  },
  "warnings": []
}
