crates/tokmd-format/tests/snapshots/snapshot_coverage__module_tsv_multiple.snap
---
source: crates/tokmd-format/tests/snapshot_coverage.rs
assertion_line: 374
expression: "render_module_tsv(&report, ChildIncludeMode::Separate)"
---
Module	Code	Lines	Files	Bytes	Tokens	Avg
src/core	1200	1440	12	60000	3000	120
src/api	600	720	6	30000	1500	120
src/util	300	360	3	15000	750	120
Total	2100	2520	21	105000	5250	120
